update java-client to 1.5.0, update keycloak dependencies